# obsync

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  obsync.yml.example  package-lock.json  package.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  GETTING-STARTED.md  PLATFORM-SERVICE.md  TROUBLESHOOTING.md
src/adapters/: interface.ts  obsidian.ts
src/ai/: callout.test.ts  callout.ts  claude.test.ts  claude.ts  ollama.test.ts  ollama.ts  openai.test.ts  openai.ts  process.test.ts  process.ts  prompts.test.ts  prompts.ts  provider.test.ts  provider.ts  queue.test.ts  queue.ts  redact.test.ts  redact.ts  triggers.test.ts  triggers.ts
src/audit/: logger.ts  types.ts
src/cli/: index.spawn.test.ts  index.ts
src/config/: editor.test.ts  editor.ts  init.ts  loader.ts  types.test.ts  types.ts
src/generators/: changelog.test.ts  changelog.ts  dashboard.test.ts  dashboard.ts  index-page.test.ts  index-page.ts
src/health/: checks.ts  darwin.ts  linux.ts  win32.ts
src/onboarding/: detect.test.ts  detect.ts  discover.test.ts  discover.ts  vault-categories.test.ts  vault-categories.ts
src/state/: store.ts  (+1 more)
widget/: README.md  package-lock.json  package.json  tsconfig.json
widget/src-tauri/: Cargo.toml  tauri.conf.json
widget/src-tauri/capabilities/: default.json
widget/src-tauri/icons/: icon.icns
widget/src-tauri/src/: commands.rs  lib.rs  main.rs  service_status.rs  tray.rs
widget/src-tauri/src/status/: mod.rs  poller.rs  state.rs  types.rs  watcher.rs
(+75 files in other folders)
