[package]
name = "obsync-widget"
version = "0.1.0"
edition = "2021"
description = "macOS menu bar widget for obsync watch/sync status"
authors = ["obsync"]
license = "MIT"
repository = "https://github.com/unconumb/obsync"
default-run = "obsync-widget"

[lib]
name = "obsync_widget_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[[bin]]
name = "obsync-widget"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
dirs = "6.0.0"
image = { version = "0.25.10", default-features = false, features = ["png"] }
libc = "0.2.186"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tauri = { version = "2.11.2", features = ["tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2.5.4"
tauri-plugin-shell = "2.3.5"
tokio = { version = "1.52.3", features = ["time"] }
